--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "parcel build src/index.html --no-scope-hoist --public-url=/",
     "serve": "live-server --port=1234 ./dist/",
     "watch": "parcel watch ./src/index.html --no-hmr",
@@ -15,7 +16,8 @@
     "@parcel/transformer-glsl": "^2.0.0",
     "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
-    "parcel": "^2.0.0"
+    "parcel": "^2.0.0",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "three": "^0.134.0",
